# LegalEase

./: .gitignore  README.md  pyproject.toml
app/core/: config.py
backend/: .env.example  .gitignore  Dockerfile  README.md  README_LEGAL_AI.md  docker-compose.yml  pyproject.toml  start.sh  test_auth.py
backend/backend/: main.py  settings.py
backend/backend/keys/: documentai-key.json  documentai-key.json.url  vertexai-sa-key.json  vertexai-sa-key.json.url
backend/backend/services/documentAI/: localtest.py  ocr_service.py  service.py
backend/backend/services/legalEaseAI/: astra_db_service.py  document_vectorization_service.py  langgraph_workflow.py  legalEaseAI.py
backend/backend/services/supabase/: supabase_upload.py
backend/backend/web/: lifespan.py
backend/backend/web/api/: router.py
backend/backend/web/api/documentAI/: views.py
backend/backend/web/api/legalAI/: __init__.py  views.py
backend/tests/: conftest.py  test_legal_ai.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  nav-layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/developers/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/hooks/: useAuthGuard.ts
frontend/src/app/ui/: ChromaGrid.css  ChromaGrid.tsx  ExampleContent.tsx  MainNav.tsx  OverlayCopy.tsx  ResponsiveSearchBar.tsx  StickyImage.tsx  TextParallaxContent.tsx  Threads.tsx  components.ts  login_form.tsx  resizable-navbar.tsx  signup_form.tsx
frontend/src/lib/: firebase.ts
(+3 files in other folders)
